Add empty folder creation and deletion commands

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,11 +2,10 @@
 action_warnings=True
 force_color=True
 # become_password_file=
-home=~/.ansible
 collections_path= ./others/collections/
 local_tmp= ./others/tmp/
 log_path= ./others/logs/
-roles_path= ./roles/
+roles_path=./roles
 ask_pass=False
 ask_vault_pass=False
 debug=False
